Finally fixed (with a bit of a !important CSS hack the sidebar z-index problem on Chrome for iOS

--- a/code/app/routes/home.css
+++ b/code/app/routes/home.css
@@ -5,9 +5,10 @@
   padding: 1em;
 }
 
-@media all and (max-width: 40em) {
+@media all and (max-width: 65em) {
   .section1 {
     background-image: url("/images/frontpage_mgb1.png");
+    background-size: 250px Auto;
     background-repeat: no-repeat;
     background-position: right;
     padding: 1em;
